--- a/public/index.html
+++ b/public/index.html
@@ -1,65 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta name="author" content="Leandre B.">
-        <meta name="description" content="Générateur aléatoire d'artwork depuis ArtStation">
-        <meta name="copyright" content="Leandre B.">
 
-        <meta name="theme-color" content="#cc6600">
+<head>
+    <meta name="author" content="Leandre B.">
+    <meta name="description" content="Générateur aléatoire d'artwork depuis ArtStation">
+    <meta name="copyright" content="Leandre B.">
 
-        <meta property="og:title" content="ArtStation Generator">
-        <meta property="og:type" content="website">
-        <!-- <meta property="og:site_name" content="L'arbre à vin"> -->
-        <meta property="og:description" content="Générateur aléatoire d'artwork depuis ArtStation">
-        <meta property="og:url" content="https://larbreavin.ddns.net/Artstation_Random/">
-        <meta property="og:locale" content="fr">
-        <meta property="og:image" content="https://larbreavin.ddns.net/Artstation_Random/icon.png">
+    <meta name="theme-color" content="#cc6600">
 
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>ArtStation Generator</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" href="icon.png">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/209a32a587.js" crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    </head>
+    <meta property="og:title" content="ArtStation Generator">
+    <meta property="og:type" content="website">
+    <!-- <meta property="og:site_name" content="L'arbre à vin"> -->
+    <meta property="og:description" content="Générateur aléatoire d'artwork depuis ArtStation">
+    <meta property="og:url" content="https://larbreavin.ddns.net/Artstation_Random/">
+    <meta property="og:locale" content="fr">
+    <meta property="og:image" content="https://larbreavin.ddns.net/Artstation_Random/icon.png">
 
-    <body>
-        <header>
-            <div>
-                <img src="icon.png" class="icon">
-                <h1>
-                    Découvre des artwork aléatoirement !
-                </h1>
-                <a href="https://www.artstation.com/?sort_by=trending" class="redirect" target="_blank">
-                    <h2>
-                        Site officiel d'artstation
-                    </h2>
-                </a>
-            </div>
-        </header>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ArtStation Generator</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="icon.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/209a32a587.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+</head>
 
-        <div class="randomizer" id="randomButton">
-            <i class="fas fa-random"></i>
+<body>
+    <header>
+        <div>
+            <img src="icon.png" class="icon">
+            <h1>
+                Découvre des artwork aléatoirement !
+            </h1>
+            <a href="https://www.artstation.com/?sort_by=trending" class="redirect" target="_blank">
+                <h2>
+                    Site officiel d'artstation
+                </h2>
+            </a>
         </div>
+    </header>
 
-        <div class="containers" id="contain"></div>
+    <div class="randomizer" id="randomButton">
+        <i class="fas fa-random"></i>
+    </div>
 
-        <div id="model" style="display: none;">
-            <div class="contain1">
-                <a href="" target="_black" class="redirect1">
-                    <img class="pic" src="small_square.png" alt="404 not found">
-                </a>
-                <a href="" target="_black" class="redirect2">
-                    <p class="text"></p>
-                </a>
-            </div>
+    <div class="containers" id="contain"></div>
+
+    <div id="model" style="display: none;">
+        <div class="contain1">
+            <a href="" target="_black" class="redirect1">
+                <img class="pic" src="small_square.png" alt="404 not found">
+            </a>
+            <a href="" target="_black" class="redirect2">
+                <p class="text"></p>
+            </a>
         </div>
+    </div>
 
-        <script src='script.js'></script>
-    </body>
+    <div class="chat"><script id="cid0020000306260361396" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">{"handle":"svadilfarif","arch":"js","styles":{"a":"ff6600","b":100,"c":"000000","d":"000000","e":"000000","g":"ffffff","h":"000000","j":"ffffff","k":"000000","l":"ffffff","m":"CC0000","n":"FFFFFF","p":"11.07","q":"ffffff","r":100,"t":0,"usricon":0.95,"surl":0,"cnrs":"0.55"}}</script></div>
+
+    <script src='script.js'></script>
+</body>
+
 </html>
