--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta name="author" content="Leandre B.">
+    <meta name="author" content="Léo B.">
     <meta name="description" content="Générateur aléatoire d'artwork depuis ArtStation">
-    <meta name="copyright" content="Leandre B.">
+    <meta name="copyright" content="Léo B.">
 
     <meta name="theme-color" content="#cc6600">
 
